--- a/03. Chạy lệnh Linux và trợ giúp lệnh.md
+++ b/03. Chạy lệnh Linux và trợ giúp lệnh.md
@@ -1,1 +1,16 @@
-- Khi làm việc với HĐH Linux hầu như tất cả người dùng đều sử dụng lệnh để làm việc. Lệnh là một chương trình hoặc một script dùng để thực thi một nhiệm vụ nào đó. Lệnh được gõ sau dấu nhắc shell
+- Khi làm việc với HĐH Linux hầu như tất cả người dùng đều sử dụng lệnh để làm việc. Lệnh là một chương trình hoặc một script dùng để thực thi một nhiệm vụ nào đó. Lệnh được gõ sau dấu nhắc shell.
+- Dòng lệnh shell tổng quát có dạng như sau: ```command [opitions]```
+  Trong đó:
+    + command: Lệnh.
+    + options: Tùy chọn. Thường bắt đầu bằng - hoặc --. Nhiều tùy chọn có thể kết hợp bằng một ký hiệu -. Ví dụ: -lF thay vì -l -F
+    + arguments: Tham số lệnh.
+**Chú ý**: Dòng lệnh shell có phân biệt chữ thường và chữ hoa.
+
+
+- Lệnh trợ giúp: ```man```
+  Mỗi lệnh trên Linux có rất nhiều options, mỗi options thực hiện các chức năng khácnhau, người quản trị cũng không cần nhớ hết các options của lệnh mà chỉ cần nhớ một vài options thông dụng. Để biết một lệnh có bao nhiêu options cũng như chức năng của từng options thì lệnh đầu tiên cần phải biết là lệnh: ```man```    <br/>
+  Cấu trúc lệnh: ```man <tên_lệnh>```   <br/>
+  Ví dụ: Để xem hướng dẫn sử dụng lệnh cp (copy) có thể nhập lệnh ```$man cp```   <br/>
+  ```shift g``` để đi tới cuối trang trợ giúp lệnh, `g`để đi tới đầu trang trợ giúp lệnh, `q` để thoát trang trợ giúp lệnh.
+
+  
