--- a/03. Chạy lệnh Linux và trợ giúp lệnh.md
+++ b/03. Chạy lệnh Linux và trợ giúp lệnh.md
@@ -7,7 +7,7 @@
 **Chú ý**: Dòng lệnh shell có phân biệt chữ thường và chữ hoa.
 
 
-- Lệnh trợ giúp: ```man```
+- Lệnh trợ giúp: ```man```    <br/>
   Mỗi lệnh trên Linux có rất nhiều options, mỗi options thực hiện các chức năng khácnhau, người quản trị cũng không cần nhớ hết các options của lệnh mà chỉ cần nhớ một vài options thông dụng. Để biết một lệnh có bao nhiêu options cũng như chức năng của từng options thì lệnh đầu tiên cần phải biết là lệnh: ```man```    <br/>
   Cấu trúc lệnh: ```man <tên_lệnh>```   <br/>
   Ví dụ: Để xem hướng dẫn sử dụng lệnh cp (copy) có thể nhập lệnh ```$man cp```   <br/>
