Update 04. Các lệnh file system thiết yếu.md

--- a/04. Các lệnh file system thiết yếu.md
+++ b/04. Các lệnh file system thiết yếu.md
@@ -1,4 +1,4 @@
-```pwd```: print name of current working directory
+```pwd```: print name of current working directory  <br/>
 ```cd```: change directory
 ```ls```: list directory contents
 
