--- a/04. Các lệnh file system thiết yếu.md
+++ b/04. Các lệnh file system thiết yếu.md
@@ -1,14 +1,14 @@
 ```pwd```: print name of current working directory  <br/>
-```cd```: change directory
+```cd```: change directory <br/>
 ```ls```: list directory contents
 
 <br/>
 
-```cd ..``` : thoát ra thư mục con, trở về thư mục cha trực tiếp của nó
-```cd ../../..``` : thoát nhiều lần
-```cd -``` : trở lại thư mục vừa rời đi
+```cd ..``` : thoát ra thư mục con, trở về thư mục cha trực tiếp của nó  <br/>
+```cd ../../..``` : thoát nhiều lần   <br/>
+```cd -``` : trở lại thư mục vừa rời đi  <br/>
 
 <br/>
 
-```ls -l``` (viết tắt là ll ): liệt kê chi tiết hơn ( ngày giờ tạo file, kích thước,..)
+```ls -l``` (viết tắt là ll ): liệt kê chi tiết hơn ( ngày giờ tạo file, kích thước,..)     <br/>
 ```ls -l -a``` ( viết tắt -la): liệt kê các file ẩn ( file ẩn bắt đầu bằng dấu .)
