--- a/05. Đường dẫn.md
+++ b/05. Đường dẫn.md
@@ -6,6 +6,5 @@ tập và là quản trị hệ thống Linux.
     Ví dụ: /etc/sysconfig  <br/>
   + Đường dẫn tương đối: không bắt đầu bằng “/”.   <br/>
   Ví dụ: etc/sysconfig   <br/>
-  + Đường dẫn đặt biệt: “..” Thư mục cha. <br/>
-                  “.” Thư mục hiện tại.
+  + Đường dẫn đặt biệt: “..” Thư mục cha. “.” Thư mục hiện tại.
 
