--- a/03. Ba loại stream tron Linux.md
+++ b/03. Ba loại stream tron Linux.md
@@ -3,20 +3,25 @@
 	+ Stdin, Stdout, và Stdderr là ba luồng tiêu chuẩn được thiết lập khi một lệnh Linux được thực thi. Chúng được gọi là các open file và hệ thống gán cho mỗi file này một con số gọi là file descriptor (stdin:0, stdout:1, stderr:2) 
 	+ Xuất/Nhập: Trong chế độ command line, "<" dùng cho chuyển hướng nhập;  ">" dùng cho chuyển hướng xuất. Phải chuyển hướng vì có nhiều lúc ta muốn kết quả xuất ra màn hình được lưu lại vào một file; dữ liệu nhập vào thay vì từ bàn phím thì lại từ một file.
 
- - stdin: Dữ liệu được truyền vào câu lệnh ( thường là từ bàn phím ). Hoặc chuyển hướng nội dung của file đến nội dung của một tiến trình, thay vì nhập đầu vào từ bàn phím thì có thể được tải từ một file.   <br/>
-  Chuyển hướng đầu vào: Dùng dấu "<"  cat < hello.txt
-  
-- stdout: Kết quả trả về sau khi chạy đúng lệnh.  <br/>
-  - Chuyển hướng đầu ra:
-      + Thay vì xuất ra màn hình terminal, output có thể ghi vào tập tin, hoặc truyền cho process khác xử lý tiếp.
-      + Dấu ">" hoặc "1>", khi ghi tệp sẽ tạo ra tệp tin mới, nếu tệp đã tồn tại thì nó sẽ thực hiện ghi đè lên tệp tin đó.
-      + Để không ghi đè lên tệp tin cũ, dùng ">>" hoặc "1>>" để thêm nội dung khi output   <br/>
-			Ví dụ: ls > abc.txt  => cat abc.txt
+### 1. stdin.
+- Dữ liệu được truyền vào câu lệnh ( thường là từ bàn phím ). Hoặc chuyển hướng nội dung của file đến nội dung của một tiến trình, thay vì nhập đầu vào từ bàn phím thì có thể được tải từ một file.  
+- Chuyển hướng đầu vào: Dùng dấu "<". Ví dụ: ```cat < hello.txt```
 
-- stderr: Lỗi trả về khi chạy lệnh chưa đúng hoặc có lỗi xảy ra.  <br/>
-  Chuyển hướng lỗi (tương tự chuyển hướng đầu vào ):   <br/>
 
-  ```
+### 2. stdout.
+- Kết quả trả về sau khi chạy đúng lệnh.  
+- Chuyển hướng đầu ra:
+  + Thay vì xuất ra màn hình terminal, output có thể ghi vào tập tin, hoặc truyền cho process khác xử lý tiếp.
+  + Dấu ```>``` hoặc ```1>```, khi ghi tệp sẽ tạo ra tệp tin mới, nếu tệp đã tồn tại thì nó sẽ thực hiện ghi đè lên tệp tin đó.
+  + Để không ghi đè lên tệp tin cũ, dùng ```>>``` hoặc ```1>>``` để thêm nội dung khi output   <br/>
+	Ví dụ: ```ls > abc.txt```  => ```cat abc.txt```
+
+
+### 3. stderr.
+- Lỗi trả về khi chạy lệnh chưa đúng hoặc có lỗi xảy ra.  
+- Chuyển hướng lỗi (tương tự chuyển hướng đầu vào ):   <br/>
+
+ ```
   mamn 2> err.txt  
   find / -name keepwalking 2>> error.log
 ```
