--- a/03. Ba loại stream tron Linux.md
+++ b/03. Ba loại stream tron Linux.md
@@ -1,11 +1,11 @@
 - Ba loại streams trong Linux:
 	+ Trong máy tính, luồng là thứ có thể truyền dữ liệu. Trong trường hợp của các luồng này, dữ liệu là văn bản.
 	+ Stdin, Stdout, và Stdderr là ba luồng tiêu chuẩn được thiết lập khi một lệnh Linux được thực thi. Chúng được gọi là các open file và hệ thống gán cho mỗi file này một con số gọi là file descriptor (stdin:0, stdout:1, stderr:2) 
-	+ Xuất/Nhập: Trong chế độ command line, "<" dùng cho chuyển hướng nhập;  ">" dùng cho chuyển hướng xuất. Phải chuyển hướng vì có nhiều lúc ta muốn kết quả xuất ra màn hình được lưu lại vào một file; dữ liệu nhập vào thay vì từ bàn phím thì lại từ một file.
+	+ Xuất/Nhập: Trong chế độ command line, ```<``` dùng cho chuyển hướng nhập;  ```>``` dùng cho chuyển hướng xuất. Phải chuyển hướng vì có nhiều lúc ta muốn kết quả xuất ra màn hình được lưu lại vào một file; dữ liệu nhập vào thay vì từ bàn phím thì lại từ một file.
 
 ### 1. stdin.
 - Dữ liệu được truyền vào câu lệnh ( thường là từ bàn phím ). Hoặc chuyển hướng nội dung của file đến nội dung của một tiến trình, thay vì nhập đầu vào từ bàn phím thì có thể được tải từ một file.  
-- Chuyển hướng đầu vào: Dùng dấu "<". Ví dụ: ```cat < hello.txt```
+- Chuyển hướng đầu vào: Dùng dấu ```<```. Ví dụ: ```cat < hello.txt```
 
 
 ### 2. stdout.
