--- a/06. Đường dẫn.md
+++ b/06. Đường dẫn.md
@@ -2,9 +2,9 @@
 tập và là quản trị hệ thống Linux.
 
 - Có 3 loại đường dẫn:
-  + Đường dẫn tuyệt đối: bắt đầu bằng “/”.  <br/>
-    Ví dụ: /etc/sysconfig  <br/>
-  + Đường dẫn tương đối: không bắt đầu bằng “/”.   <br/>
-  Ví dụ: etc/sysconfig   <br/>
-  + Đường dẫn đặt biệt: “..” Thư mục cha. “.” Thư mục hiện tại.
+  + Đường dẫn tuyệt đối: bắt đầu bằng ```/```.  <br/>
+    Ví dụ: ```/etc/sysconfig```  <br/>
+  + Đường dẫn tương đối: không bắt đầu bằng ```/```.   <br/>
+  Ví dụ: ```etc/sysconfig```   <br/>
+  + Đường dẫn đặt biệt: ```..``` là Thư mục cha. ```.``` là Thư mục hiện tại.
 
