--- a/08. Tạo, xóa thư mục, file.md
+++ b/08. Tạo, xóa thư mục, file.md
@@ -1,13 +1,13 @@
-```mkdir```: tạo thư mục  ( ```mkdir thumuc1 thumuc2 thumuc3``` hoặc ```mkdir thumuc{1,2,3}``` ).
-```mkdir .../....``` : tạo thư mục con của một thư mục khác. ( ví dụ: ```mkdir gio/phut```)
+```mkdir```: tạo thư mục  ( ```mkdir thumuc1 thumuc2 thumuc3``` hoặc ```mkdir thumuc{1,2,3}``` ).  <br/>
+```mkdir .../....``` : tạo thư mục con của một thư mục khác. ( ví dụ: ```mkdir gio/phut```)   <br/>
 ```mkdir -p .../...``` : tạo thư mục con của thư mục cha, nhưng thư mục cha chưa được tạo.
 
 <br/>
 
-```touch```: tạo file ( tương tự như tạo thư mục ).
+```touch```: tạo file ( tương tự như tạo thư mục ).   <br/>
 ```rm```: xóa file.
 
 <br/>
 
-```rm -rf```: xóa thư mục không cần hỏi.
+```rm -rf```: xóa thư mục không cần hỏi.   <br/>
 ```rm -r```: ( xóa từ thư mục là con, bé nhất lần lượt đến thư mục cần xóa ).  
