--- a/10. Các kiểu đọc nội dung flie.md
+++ b/10. Các kiểu đọc nội dung flie.md
@@ -1,5 +1,11 @@
-```cat tenfile```: hiển thị tất cả nội dung file, nếu nội dung dài quá thì phải kéo xuống để đọc.  <br/>
-```more tenfile``` : hiện từng dòng văn bản, bấm ```space``` để xem tiếp, nhưng chỉ xem được từ đầu đến cuối, muốn xem lại từ đầu thì phải chạy lại lệnh ```more```.  <br/>
+```cat tenfile```: hiển thị tất cả nội dung file, nếu nội dung dài quá thì phải kéo xuống để đọc. 
+
+ <br/>
+
+```more tenfile``` : hiện từng dòng văn bản, bấm ```space``` để xem tiếp, nhưng chỉ xem được từ đầu đến cuối, muốn xem lại từ đầu thì phải chạy lại lệnh ```more```.  
+
+ <br/>
+
 ```less tenfile``` : <br/>
   + mũi tên lên/xuống/ pageup/pagedown.
   + ```g``` hoặc ```shift g``` để di chuyển lên/xuống.
