--- a/10. Các kiểu đọc nội dung flie.md
+++ b/10. Các kiểu đọc nội dung flie.md
@@ -14,7 +14,10 @@
 <br/>
 
 ```head tenfile```: hiển thị 10 dòng đầu. <br/>
-```head -n 5 tenfile``` : hiện thị 5 dòng đầu. <br/>
+```head -n 5 tenfile``` : hiện thị 5 dòng đầu.
+
+ <br/>
+
 ```tail tenfile``` : hiển thị 10 dòng cuối. <br/>
 ```tail -n 5 tenfile``` : hiển thị 5 dòng cuối.  <br/>
 ```tail –f```
