--- a/11. Trình soạn thảo văn bản Vi.md
+++ b/11. Trình soạn thảo văn bản Vi.md
@@ -1,7 +1,29 @@
-```vi tenfile```  => enter => đi đến chế độ command  <br/>
-Bấm ```i``` để đến chế độ insert ( soạn thảo văn bản ở chế độ này )  <br/>
-Bấm ```esc``` để thoát chế độ insert ( quay lại chế độ command )  <br/>
-Có thể coppy (dòng), xóa (dòng), sửa/tìm kiếm văn bản ở chế độ command ( chỉ con trỏ đến dòng: dd p dd u   /tucantimkiem )
+- Vi là trình soạn thảo có mặt trên các hệ điều hành Unix/Linux. Vi thường được sử dụng
+trong việc tạo và chỉnh sửa các file cấu hình trên Linux. Biết cách sử dụng trình soạn thảo
+Vi sẽ giúp ích rất nhiều cho người quản trị trong việc vận hành và phát triển dịch vụ trên
+Linux.
+
+- Các chế độ làm việc của Vi
+
+![Imgur](https://i.imgur.com/58gUD92.png)
+
+- Để Tạo hoặc chỉnh sủa file:  ```#vi tenfile```
+  + ```vi file``` --> bắt đầu dòng 1.
+  + ```vi + n file``` --> bắt đầu ở dòng n.
+  + ```vi + /pattern``` --> bắt đầu ở pattern.
+  + ```vi -r file``` --> phục hồi tập tin sau khi hệ thống treo.  <br/>
+  
+Khi thực tiện lệnh này ta sẽ vào chế độ Command mode. Ở chế độ này ta sẽ sử dụng các lệnh để làm việc. Nếu muốn chỉnh sửa văn bản ta phải chuyển sang chế độ Text mode.
+  + dd: Xóa dòng.
+  + x: Xóa kí tự.
+  + yy: Coppy dòng.
+  + p: Paste dòng.
+  
+- Để chuyển từ chế độ Command mode sang Text mode ta bấm phím ```i``` hoặc ```a``` hoặc ```insert```.
+- Để chuyển từ chế độ Text mode sang Command mode ta bấm phím ```esc```
+- Để thoát khỏi vi ta phải ở chế độ command mode và thực hiện lệnh thoát:
+  + Thoát và không lưu các thay đổi ta dùng lệnh: ```:q!```
+  + Thoát và lưu: ```:x``` hoặc ```:wq```
 
 <br/>
 
@@ -9,5 +31,3 @@ Có thể coppy (dòng), xóa (dòng), sửa/tìm kiếm văn bản ở chế đ
 - ```%s/ngay/day/g```: sửa ngay thành day.
 - ```/tucantimkiem```
 - ```set nu```: hiện số dòng ở từng dòng ( ```set nonu``` để tắt )
-- ```wq``` để lưu và thoát
-- ```quit!``` thoát và không lưu
