--- a/11. Trình soạn thảo văn bản Vi.md
+++ b/11. Trình soạn thảo văn bản Vi.md
@@ -13,11 +13,11 @@ Linux.
   + ```vi + /pattern``` --> bắt đầu ở pattern.
   + ```vi -r file``` --> phục hồi tập tin sau khi hệ thống treo.  <br/>
   
-Khi thực tiện lệnh này ta sẽ vào chế độ Command mode. Ở chế độ này ta sẽ sử dụng các lệnh để làm việc. Nếu muốn chỉnh sửa văn bản ta phải chuyển sang chế độ Text mode.
-  **dd**: Xóa dòng.
-  **x**: Xóa kí tự.
-  **yy**: Coppy dòng.
-  **p**: Paste dòng.
+Khi thực tiện lệnh này ta sẽ vào chế độ Command mode. Ở chế độ này ta sẽ sử dụng các lệnh để làm việc. Nếu muốn chỉnh sửa văn bản ta phải chuyển sang chế độ Text mode.  <br/>
+  **dd**: Xóa dòng. <br/>
+  **x**: Xóa kí tự. <br/>
+  **yy**: Coppy dòng. <br/>
+  **p**: Paste dòng. <br/>
   
 - Để chuyển từ chế độ Command mode sang Text mode ta bấm phím ```i``` hoặc ```a``` hoặc ```insert```.
 - Để chuyển từ chế độ Text mode sang Command mode ta bấm phím ```esc```
