--- a/15. Thay đổi quyền của file.md
+++ b/15. Thay đổi quyền của file.md
@@ -7,11 +7,11 @@
 
 - Thay đổi quyền bằng chữ:
   - ```chmod u+w abc.txt``` : thêm quyền w vào người sở hữu.
-	- ```chmod g+wx abc.txt``` : thêm quyền w và x vào nhóm sở hữu.
-	- ```chmod u-wrx,g-wrx,owx abc.txt``` : xóa hết quyền .
+  - ```chmod g+wx abc.txt``` : thêm quyền w và x vào nhóm sở hữu.
+  - ```chmod u-wrx,g-wrx,owx abc.txt``` : xóa hết quyền .
 
 
-- Thay đổi quyền bằng số: Read = 4; Write = 2; Execute = 1
+- Thay đổi quyền bằng số: Read = 4; Write = 2; Execute = 1  <br/>
 Ví dụ: ```chmod 775 abc.txt``` <br/>
     User có quyền đọc, ghi, thực thi: 4+2+1=7 <br/>
     Group có quyền đọc, ghi, thực thi: 4+2+1=7 <br/>
