--- a/16. Lọc dữ liệu.md
+++ b/16. Lọc dữ liệu.md
@@ -1,10 +1,7 @@
 #### 1. Lọc dữ liệu theo dòng: grep. 
 - Option
   + -n : hiển thi thứ tự dòng. 
-  + -i : tìm không cần phân biệt chữ in hoa hay chữ thường.
-
-<br/>
-
+  + -i : tìm không cần phân biệt chữ in hoa hay chữ thường. <br/>
 Ví dụ: ```grep -n hoangkien /etc/passwd```
 
 
