--- a/17. Cài đặt phần mềm bằng rpm.md
+++ b/17. Cài đặt phần mềm bằng rpm.md
@@ -47,7 +47,7 @@ foo package foo-1.0-1 is already installed
 ```
 <br/>
 
-Nếu bạn muốn cài chồng lên package đã cài rồi dùng lệnh thêm tham số:  ```--replacepkgs``` : ```#rpm -ivh --replacepkgs foo-1.0-1.i386.rpm```
+Nếu bạn muốn cài chồng lên package đã cài rồi dùng lệnh thêm tham số ```--replacepkgs``` : ```#rpm -ivh --replacepkgs foo-1.0-1.i386.rpm```
 
 - Ví dụ: xung đột với tập tin cũ đã tồn tại:
 ```
@@ -103,7 +103,7 @@ foo ####################################
 ```
 
 ### 4. Truy vấn các phần mềm.
-- Để truy vấn thông tin từ cơ sở dữ liệu của những package đã cài đăt bạn dùng: ```#rpm -q tên-package```
+- Để truy vấn thông tin từ cơ sở dữ liệu của những package đã cài đăt bạn dùng: ```#rpm -q tên-package```    <br/>
 Ví dụ:
 ```
 # rpm -q foo
