--- a/17. Cài đặt phần mềm bằng rpm.md
+++ b/17. Cài đặt phần mềm bằng rpm.md
@@ -67,7 +67,7 @@ mà không cài các package khác thì dùng tùy chọn ```--nodeps```. Tuy nh
 của bạn cài có thể chạy không tốt.
 
 ### 2. Loại bỏ phần mềm đã cài đặt trong hệ thống.
-- Xóa package: ```# rpm -e tên-packageXóa package```
+- Xóa package: ```# rpm -e tên-package```
 Lưu ý là khi xóa chúng ta dùng tên-package chứ không dùng tên tập tin RPM. <br/>
 Ví dụ:
 ```
@@ -125,3 +125,63 @@ ngày tạo, ngày cài đặt, nhà sản xuất ...
   + -s : Hiển thị trạng thái của các tập tin trong package.
   + -d : hiển thị danh sách tập tin tài liệu cho package. ( ví dụ man, README, info file ...)
   + --c : hiển thị danh sách tập tin cấu hình.
+
+### 5. Kiểm tra các tập tin đã cài đặt.
+- Kiểm tra xem tập tin đã cài đặt với các tập tin gốc của package. Các thông tin dùng kiểm tra là :
+kích thước, MD5 checksum, quyền hạn, loại tập tin, người sở hữu, nhóm sở hữu tập tin.
+  + ```rpm –V tên-package```: Kiểm tra tất cả các tập tin trong package.
+  + ```rpm –vf tên-file``` : Kiểm tra tập tin tên-file
+  + ```rpm –Va```: Kiểm tra tất cả các package đã cài.
+  + ```rpm –Vp tên-tập-tin-RPM```: Kiểm tra một package với tập tin package xác định, thường
+sử dụng trong trường hợp cơ sở dữ liệu của RPM bị hỏng.
+
+- Khi kiểm tra nếu không có lỗi thì không có hiển thị, nếu không thì sẽ thông báo ra. Định dạng của
+dòng thông báo gồm 8 ký tự và tên tập tin. Mỗi ký tự biểu diễn cho kết quả của việc so sánh một
+thuộc tính của tập tin với thuộc tính lưu trong cơ sở dữ liệu RPM. Dấu chấm (.) nghĩa là đã kiểm
+tra xong. Những ký tự đại diện cho các lỗi kiểm tra.
++ 5 – MD5 checksum.
++ S – kích thước tập tin.
++ L – liên kết mềm.
++ T - thời gian cập nhật tập tin.
++ D - thiết bị.
++ U – người sở hữu.
++ G – nhóm sở hữu.
++ M - quyền truy xuất và loại tập tin.
++ ? – không tìm thấy tập tin.
+
+### 6. Cài đặt phần mềm file nguồn *.tar, *.tgz
+- Ngoài các phần mềm được đóng gói dạng file nhị phân(file *.rpm) còn có các phần mềm được
+cung cấp dạng file source code như: *.tar hoặc *.tgz. Thông thường để cài đặt phần mềm này ta
+cần phải dựa vào trợ giúp của file giúp đỡ trong từng chương trình hoặc phần mềm, các
+file(README or INSTALL,) này nằm trong các thư mục con của thư mục sau khi ta dùng lệnh tar
+để giải nén source. Để thực hiện việc cài đặt này ta thường làm các bước sau:
+- **Bước 1**: Giải nén file tar:  <br/>
+Ví dụ:
+```
+[root@bigboy tmp]# tar -xvzf linux-software-1.3.1.tar.gz
+linux-software-1.3.1/
+linux-software-1.3.1/plugins-scripts/
+...
+...
+linux-software-1.3.1/linux-software-plugins.spec
+[root@bigboy tmp]#
+Tạo các thư mục con chứa các file cài đặt
+[root@bigboy tmp]# ls
+linux-software-1.3.1 linux-software-1.3.1.tar.gz
+[root@bigboy tmp]#
+```
+
+- **Bước 2**: Chuyển vào thư mục con và tham khảo các file INSTALL, README:  <br/>
+Ví dụ:
+```
+[root@bigboy tmp]# cd linux-software-1.3.1
+[root@bigboy linux-software-1.3.1]# ls
+COPYING install-sh missing plugins
+depcomp LEGAL mkinstalldirs plugins-scripts
+FAQ lib linux-software.spec README
+Helper.pm Makefile.am linux-software.spec.in REQUIREMENTS
+INSTALL Makefile.in NEWS subst.in
+[root@bigboy linux-software-1.3.1]#
+```
+
+- **Bước 3**: Sau đó ta dựa vào chỉ dẫn trong file (INSTALL, README) để cài đặt phần mềm.
