--- a/18. Cài đặt phần mềm bằng yum.md
+++ b/18. Cài đặt phần mềm bằng yum.md
@@ -49,4 +49,27 @@ Ví dụ:  ```# yum -y install firefox```
 
 
  ### 9. Hiển thị tất cả Group Packages.
- 
+ - Trong Linux,số lượng các package sẽ được đưa vào một nhóm cụ thể. Ví dụ nhóm Installed Group sẽ chứa những package đã cài đặt, nhóm Available Groups sẽ chứa những package có sẵn để cài đặt.   <br/>
+Hiển thị các group: ```# yum grouplist```
+
+![Imgur](https://i.imgur.com/xwlNvSA.png)
+
+- Cài đặt tất cả những package nằm trong nhóm Available Group: ```# yum groupinstall 'Available Group'```
+
+- Update các package nằm trong nhóm: ```# yum groupupdate 'Available Group'```
+
+- Xóa tất cả package trong group: ```# yum groupremove 'Available Group'```
+
+
+### 10. Liệt kê repo có sẵn.
+- Xem tất cả những kho repo có sẵn trong hệ thống: ```# yum repolist```
+
+- Liệt kê luôn cả những repo bị disable: ```# yum repolist all```
+
+
+### 11. Cài đặt package ở repo bị disabled.
+- Ví dụ cài đặt package tên là phpmyadmin nằm trong repo epel: ```# yum --enablerepo=epel install phpmyadmin```
+
+
+### 12. Tương tác với Shell.
+- Yum cung cấp custom shell, nơi bạn có thể thực thi nhiều lệnh: ```# yum shell```
