15. Thay đổi quyền của file.md

--- a/15. Thay đổi quyền của file.md
+++ b/15. Thay đổi quyền của file.md
@@ -15,6 +15,6 @@
 Ví dụ: ```chmod 775 abc.txt``` <br/>
     User có quyền đọc, ghi, thực thi: 4+2+1=7 <br/>
     Group có quyền đọc, ghi, thực thi: 4+2+1=7 <br/>
-    thers có quyền đọc, ghi, thực thi: 4+1=5
+    Others có quyền đọc, ghi, thực thi: 4+1=5
 
 
