--- a/16. Lọc dữ liệu.md
+++ b/16. Lọc dữ liệu.md
@@ -8,9 +8,11 @@ Ví dụ: ```grep -n hoangkien /etc/passwd```
 #### 2. Lọc dữ liệu theo cột: cut.
 		
 ```cut -d’ ’ -f1 test.txt```  <br/>
-```cut -d’:’ -f2 test.txt```
+```cut -d’:’ -f2 test.txt```  <br/>
+```cut -c1-15 test.txt```
 
 <br/>
 
-- Kí tự trong ‘’ là kí tự ngăn cách giữa các cột.	
+- Kí tự trong ’ ’ là kí tự ngăn cách giữa các cột.	
 - -fn là lấy dữ liệu ở cột thứ n.
+- -c1-15 : lọc từ kí tự thứ 1 đến kí tự thứ 15 của các cột.
