--- a/16. Lọc dữ liệu.md
+++ b/16. Lọc dữ liệu.md
@@ -1,9 +1,26 @@
 #### 1. Lọc dữ liệu theo dòng: grep. 
 - Option
-  + -n : hiển thi thứ tự dòng. 
+  + -n : hiển thị thứ tự dòng. 
   + -i : tìm không cần phân biệt chữ in hoa hay chữ thường. <br/>
-Ví dụ: ```grep -n hoangkien /etc/passwd```
-
+  + -w : tìm từ trong file y hệt từ cần tìm. <br/>
+  + -o : chỉ in ra từ cần tìm, không in ra cả dòng chứa từ. <br/>
+  + -v : in ra các dòng không chứa từ trong lệnh. <br/>
+  + -An : hiển thị cả n dòng đứng sau dòng chứa từ cần tìm. <br/>
+  + -Bn : hiển thị cả n dòng đứng trước dòng chứa từ cần tìm. <br/>
+  + -Cn : hiển thị cả n dòng đứng trước sau dòng chứa từ cần tìm. <br/>
+  + -r : tìm đường dẫn các file tại thư mục đang đứng và thư mục con chứa từ cần tìm. <br/>
+Ví dụ: <br/>
+```grep -r hoangkien .```  <br/>
+```grep "[12]" test.txt``` : tìm các dòng chứa 1 hoặc 2. <br/>
+```grep "[0-9]" test.txt``` : tìm các dòng chứa chữ số nhưng in ra từng chữ số lẻ. "[0-9]\+" để in ra cả chuỗi, khoảng giá trị có thể tùy chỉnh. <br/>
+```grep "[he2]" test.txt``` : tương tự như trên. <br/>
+```grep "[a-zA-Z]" test.txt``` : tương tự như trên. <br/>
+```grep h...gkien test.txt``` : tùy ý ... là gì cũng được.  <br/>
+```grep "^h" test.txt``` : tìm dòng bắt đầu bằng kí tự h. <br/>
+```grep "h$" test.txt``` : tìm dòng kết thúc bằng kí tự h. <br/>
+```grep "[0-9]$" test.txt``` : tìm dòng kết thúc trong khoảng. <br/>
+```grep "[^1h]" test.txt``` : tìm dòng không có số 1 và h ( đứng lẻ ). <br/>
+```grep "1\{2,3\}" test.txt``` : tìm dòng chứa 2 hoặc 3 số 1 đứng cạnh nhau. <br/>
 
 #### 2. Lọc dữ liệu theo cột: cut.
 		
