--- a/14. Thay đổi người, nhóm sở hữu file.md
+++ b/14. Thay đổi người, nhóm sở hữu file.md
@@ -2,5 +2,6 @@
 ```chown hoangkien tenfile``` : đổi người sở hữu file thành người dùng có tên là hoangkien. <br/>
 ```chown .hoangkien tenfile``` : đổi nhóm sở hữu file thành nhóm có tên là hoangkien. <br/>
 ```chown hoangkien.hoangkien tenfile``` : đổi người và nhóm sở hữu file thành hoangkien và hoangkien. <br/> 
+```usermod -aG root hoangkien``` : thêm hoangkien vào nhóm root. <br/>
 ( hoặc lệnh ```chown hoangkien:hoangkien tenfile``` )
 <br/>
