--- a/13. Tạo, xóa người dùng.md
+++ b/13. Tạo, xóa người dùng.md
@@ -15,7 +15,8 @@
 ```useradd –u 1803 kien``` : tạo người dùng có user ID là 1803. <br/>
 ```useradd –g 2001 kien``` : tạo người dùng có group ID là 2001. <br/>
 ```useradd –u 1803 –g 2001 kien```  <br/>
-```useradd -G admins,webadmin,developers tecmint```: thêm người dùng vào nhiều nhóm.
+```useradd -G admins,webadmin,developers tecmint```: thêm người dùng vào nhiều nhóm. <br/>
+```groups kien``` : xem nhóm của user 
 
 <br/>
 
