--- a/12. Tìm kiếm file.md
+++ b/12. Tìm kiếm file.md
@@ -13,5 +13,7 @@
 - Theo file vừa được thay đổi: ```find /etc -ctime -2``` :tìm file được thay đổi trong 2 ngày trước.
 
 
-- ```find /etc -size +1000k -name *.conf -ctime 10```
+- ```find /etc -size +1000k -name *.conf -ctime 10```   <br/>
+
+- ```find . -maxdepth 2```
 
